[workspace]
members = ["ular", "ular/tests/common", "ular-derive", "ular-scheduler"]
resolver = "2"

[patch.crates-io]
# For some reason, the version of `libunwind-sys` on crates.io depends on v0.52.0 of `bindgen`,
# despite the version on GitHub depending on v0.64.0. `bindgen` v0.52.0 spits out errors like these,
# so we need to use a newer version of it:
# https://github.com/oxidize-rb/rb-sys/issues/204
libunwind-sys = { git = "https://github.com/anfedotoff/libunwind-sys", branch = "master" }
